; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_file.c_linux_truncate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_file.c_linux_truncate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.linux_truncate_args = type { i32, i32 }

@UIO_SYSSPACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_truncate(%struct.thread* %0, %struct.linux_truncate_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.linux_truncate_args*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.linux_truncate_args* %1, %struct.linux_truncate_args** %4, align 8
  %7 = load %struct.thread*, %struct.thread** %3, align 8
  %8 = load %struct.linux_truncate_args*, %struct.linux_truncate_args** %4, align 8
  %9 = getelementptr inbounds %struct.linux_truncate_args, %struct.linux_truncate_args* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @LCONVPATHEXIST(%struct.thread* %7, i32 %10, i8** %5)
  %12 = load %struct.thread*, %struct.thread** %3, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* @UIO_SYSSPACE, align 4
  %15 = load %struct.linux_truncate_args*, %struct.linux_truncate_args** %4, align 8
  %16 = getelementptr inbounds %struct.linux_truncate_args, %struct.linux_truncate_args* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @kern_truncate(%struct.thread* %12, i8* %13, i32 %14, i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @LFREEPATH(i8* %19)
  %21 = load i32, i32* %6, align 4
  ret i32 %21
}

declare dso_local i32 @LCONVPATHEXIST(%struct.thread*, i32, i8**) #1

declare dso_local i32 @kern_truncate(%struct.thread*, i8*, i32, i32) #1

declare dso_local i32 @LFREEPATH(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
